# otus-cpp-hw12

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
